started the subpages

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-flag-icon-css": "^1.0.25",
+    "react-responsive-gallery": "^4.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
